--- a/WebTechnology/Lab/Lab1/4paragraph&HorizontalRulerTag.html
+++ b/WebTechnology/Lab/Lab1/4paragraph&HorizontalRulerTag.html
@@ -6,30 +6,24 @@
 </head>
 
 <body>
-    <font color="hotpink">
-        <p align="left">Lorem ipsum dolor sit amet consectetur adipisicing elit. At esse adipisci voluptatem dolorum
+        <p style="color: hotpink";align="left">Lorem ipsum dolor sit amet consectetur adipisicing elit. At esse adipisci voluptatem dolorum
             sequi
             accusantium quibusdam voluptas magnam officia, iure voluptatibus laborum provident suscipit voluptatum
             nesciunt
             dolorem a fugit minus.</p>
-    </font>
     <hr>
 
-    <font color="cyan">
-        <p align="right">Lorem ipsum dolor sit amet consectetur adipisicing elit. At esse adipisci voluptatem dolorum
+    <p style="color: cyan";align="right">Lorem ipsum dolor sit amet consectetur adipisicing elit. At esse adipisci voluptatem dolorum
             sequi
             accusantium quibusdam voluptas magnam officia, iure voluptatibus laborum provident suscipit voluptatum
             nesciunt
             dolorem a fugit minus.</p>
-    </font>
     <hr>
-    <font color="lavender">
-        <p align="center">Lorem ipsum dolor sit amet consectetur adipisicing elit. At esse adipisci voluptatem dolorum
+    <p style="color: lavender";align="center">Lorem ipsum dolor sit amet consectetur adipisicing elit. At esse adipisci voluptatem dolorum
             sequi
             accusantium quibusdam voluptas magnam officia, iure voluptatibus laborum provident suscipit voluptatum
             nesciunt
             dolorem a fugit minus.</p>
-    </font>
     <hr>
 
 </body>
