--- a/WebTechnology/Lab/Lab1/5textFormattingTags.html
+++ b/WebTechnology/Lab/Lab1/5textFormattingTags.html
@@ -1,4 +1,4 @@
-<!-- Lab 4: Design a webpage showing the use of heading tag(<h1> to <h6>) with background color "blue" and tect color "red"-->
+<!-- Lab 5: Design a webpage showing the use of text formatting tags-->
 <html>
 
 <head>
@@ -8,8 +8,8 @@
 <body>
     <b>This text is bold.</b><br>
     <strong>This text is strong.</strong><br>
-    <i>This text is italic.</i><br> 
-    <em>This text is emphasized.</em><br>             
+    <i>This text is italic.</i><br>
+    <em>This text is emphasized.</em><br>
     <mark>This text is marked.</mark><br>
     <small>This text is small.</small><br>
     <del>This text is deleted.</del><br>
