--- a/WebTechnology/Lab/Lab1/12quotation&CitationElements.html
+++ b/WebTechnology/Lab/Lab1/12quotation&CitationElements.html
@@ -25,11 +25,12 @@
     <bdo dir="rtl">This text is right to left</bdo><br><br>
 
     <address>
-        Written by Ayush Tuladhar<br>
-        ayushtuladhar007@gmail.com<br>
-        Chagal, Kathmandu
+        Written by Upendra Raj Pantar<br>
+       Sontoshpanta34@gmail.com<br>
+        Paiyatar, Kathmandu
     </address>
 
 </body>
+
 
 </html>
