--- a/WebTechnology/Lab/Lab1/16formTagSimple.html
+++ b/WebTechnology/Lab/Lab1/16formTagSimple.html
@@ -7,18 +7,34 @@
 
 <body>
 
-    <table border="2" bordercolor="green">
-        <tr>
-            <th rowspan="2">Row 1 and 2, Column 1</th>
-            <th>Row 1, Column 2</th>
-        </tr>
-        <tr>
-            <td>Row 2, Column 2</td>
-        </tr>
-        <tr>
-            <td colspan="2">Row 3, Columns 1 and 2</td>
-        </tr>
-    </table>
+    <form action="submit.php" method="post">
+
+        <label for="name">Name : </label>
+        <input type="text" id="name" name="user_name" required><br><br>
+
+        <label for="email">Email : </label>
+        <input type="email" id="email" name="user_email" required><br><br>
+
+        <label for="password">Password : </label>
+        <input type="password" id="password" name="user_password" required><br><br>
+
+        <label>Gender : </label>
+        <input type="radio" id="male" name="user_gender" value="male" required>
+        <label for="male">Male</label>
+        <input type="radio" id="female" name="user_gender" value="female">
+        <label for="female">Female</label><br><br>
+
+        <label for="country">Country : </label>
+        <select id="country" name="user_country" required>
+            <option value="">Select</option>
+            <option value="S. Korea">S. Korea</option>
+            <option value="Norway">Norway</option>
+            <option value="Japan">Japan</option>
+        </select><br><br>
+
+        <input type="submit" value="Submit">
+
+    </form>
 
 </body>
 
